--- a/WEBVR/src/index.html
+++ b/WEBVR/src/index.html
@@ -4,12 +4,35 @@
   <meta charset="utf-8">
   <title>WEBVR</title>
   <base href="/">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
+
+  <audio id="background" autoplay="autoplay" hidden= "true">
+    <source src="./assets/sounds/bg.mp3" type="audio/mp3" >
+  </audio> 
+
 </body>
+
+
+<script>
+
+  // Background music
+
+  var bg = document.getElementById("background");
+  bg.volume = 0.05;
+  bg.loop = true;
+
+  function mute(){
+    bg.muted = !bg.muted;
+  }
+
+</script>
 </html>
