--- a/WEBVR/src/index.html
+++ b/WEBVR/src/index.html
@@ -7,6 +7,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,12 +18,11 @@
 <body class="mat-typography">
   <app-root></app-root>
 
-  <audio id="background" autoplay="autoplay" hidden= "true">
+ <!-- <audio id="background" autoplay="autoplay" hidden= "true">
     <source src="./assets/sounds/bg.mp3" type="audio/mp3" >
-  </audio> 
+  </audio> -->
 
 </body>
-
 
 <script>
 
@@ -33,6 +35,7 @@
   function mute(){
     bg.muted = !bg.muted;
   }
+
 
 </script>
 </html>
